@@ -480,4 +480,30 @@ class TestGridSwap < Test::Unit::TestCase
   grid  
  end
 
+ def testRemoveCellWithTwoFaces
+  grid = Grid.new(2,1,2,0)
+  grid.addNode(0,0,0)
+  grid.addNode(1,0,0)
+  grid.addNode(0,1,0)
+  grid.addNode(0,0,1)
+  grid.addCell(0,1,2,3)
+  grid.addFace(0,1,2,10)
+  grid.addFace(0,3,1,11)
+  assert_nil grid.removeTwoFaceCell(-1)
+  assert_nil grid.removeTwoFaceCell(0)
+  assert_nil grid.removeTwoFaceCell(1)
+  assert_equal 1, grid.ncell
+  grid.removeFace(1)
+  grid.addFace(0,3,1,10)
+  assert_equal grid, grid.removeTwoFaceCell(0)
+  assert_equal 0, grid.ncell
+  assert_equal [0,2,3,10], grid.face(0)
+  assert_equal [1,3,2,10], grid.face(1)
+  grid.addCell(0,2,3,1)
+  assert_equal grid, grid.removeTwoFaceCell(0)
+  assert_equal 0, grid.ncell
+  assert_equal [0,3,1,10], grid.face(0)
+  assert_equal [0,1,2,10], grid.face(1)
+ end
+
 end
